version/0.10/_sources/examples/00-basic/index.rst.txt


.. _sphx_glr_examples_00-basic:

.. _basic-gallery:

Examples
--------

Introductory examples show how to use PyDynamicReporting to create or connect to
an Ansys Dynamic Reporting service, create a database for a new service, and
create and visualize items in a database.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="To launch the service, provide an Ansys installation directory as a string. You can provide an existing, empty, directory if you intend to create a database.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_00-launch-reporting-service_thumb.png
    :alt:

  :doc:`/examples/00-basic/00-launch-reporting-service`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Launching the Ansys Dynamic Reporting Service</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use PyDynamicReporting to create an Ansys Dynamic Reporting service, create a database for this service, and create items in this database.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_01-create_db_thumb.png
    :alt:

  :doc:`/examples/00-basic/01-create_db`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a database and populate it</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to start an Ansys Dynamic Reporting service via a Docker image, create a second instance of the Service class, and connect it to the already running service. It then shows how to create and modify items in the original database with this new instance.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_02-connect_thumb.png
    :alt:

  :doc:`/examples/00-basic/02-connect`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Connect services</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to start an Ansys Dynamic Reporting service via a Docker image and create different plot items. The example focuses on showing how to use the API to generate different plot types.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_03-plottype_thumb.png
    :alt:

  :doc:`/examples/00-basic/03-plottype`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot types</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="When working with a table, you can turn it into a plot by specifying the plot type through the plot property. Once a table is converted you can alter all sorts of plot properties by accessing properties on the item object.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_04-set-plot-properties_thumb.png
    :alt:

  :doc:`/examples/00-basic/04-set-plot-properties`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">How to set plot properties</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="When working with a table, you can turn it into a plot by specifying the plot type through the plot property. This example demonstrates a variety of the possible plot properties available.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_05-explore-plot-properties_thumb.png
    :alt:

  :doc:`/examples/00-basic/05-explore-plot-properties`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Explore plot properties</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Templates are used to specify how the final report will be organised. They can be nested to describe the layout of subsections in greater detail.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_06-create-report-templates_thumb.png
    :alt:

  :doc:`/examples/00-basic/06-create-report-templates`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Creating report templates</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/00-basic/00-launch-reporting-service
   /examples/00-basic/01-create_db
   /examples/00-basic/02-connect
   /examples/00-basic/03-plottype
   /examples/00-basic/04-set-plot-properties
   /examples/00-basic/05-explore-plot-properties
   /examples/00-basic/06-create-report-templates

